package Version;

message ProtocolVersion {
   required string value	= 1 [default = "V4.0.1"];
}
